@@ -12,11 +12,9 @@ To Do:
 - create a package of CUS indicators, default CSV plugin import rules to the install process
   so users have a bunch of examples and things to play with
 - rename indicator function (possible main plot indicator panel revision)
-- allow indicator plugins to allow for choosing a plugin as a smoothing option.
 - fix: stacked indicator widget insertion resizing is ugly.
 - allow point selection on plots to display values past the ends of the chart. (future dates and values)
 - allow individual indicators to be applied to individual charts
-- add scaling option for CUS plots.
 - change Quote behaviour in yahoo plugin to create separate symbols for intraday and daily
   data. also put a timer on yahoo plugin for intraday tick downloads every X minutes. same limitations
   will apply as in the CSV timer
