@@ -26,7 +26,7 @@
 #include <qdatetimeedit.h>
 #include <qtabdialog.h>
 #include <qlineedit.h>
-#include <qtextedit.h>
+#include <qlistview.h>
 #include "Toolbar.h"
 #include "ChartDb.h"
 #include "Config.h"
@@ -65,7 +65,7 @@ class StocksDialog : public QTabDialog
     bool saveRecordFlag;
     bool ignoreSaveRecordFlag;
     QString helpFile;
-    QTextEdit *fundView;
+    QListView *fundView;
 };
 
 #endif
