@@ -37,7 +37,7 @@ class CSV : public QuotePlugin
     void setDelimiter (QString);
     QDate getDate (QString, QString, Setting *);
     QString getTime (QString);
-    bool openDb (QString, QString, QString);
+    bool openDb (QString, QString, QString, bool);
     void loadSettings ();
     void saveSettings ();
     void prefDialog (QWidget *);
